--- a/views/partials/navBar.ejs
+++ b/views/partials/navBar.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-light bg-light">
+<nav class="navbar navbar-light bg-primary">
     <a class="navbar-brand" href="/">
       <img src="../img/socib.jpg" height="30" class="d-inline-block align-top" alt="">
       SOCIB
