--- a/views/perguntar.ejs
+++ b/views/perguntar.ejs
@@ -1,10 +1,10 @@
 <%- include ("./partials/header")%>
 <body>
     <%- include ("./partials/navBar")%>
-    <div class="container">
+    <div class="container-fluid">
         <div class="card" id="formulario-pergunta">
             <div class="card-header">
-                <h3>Realizar Pergunta</h3>
+                <h3>Cadastro de Funcionario </h3>
             </div>
             <div class="card-body"></div>
                 <form method="post" action="/salvarpergunta">
@@ -20,4 +20,5 @@
        
     </div>
 </body>
+
 <%- include ("./partials/footer.ejs") %>
