--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,12 @@
 <%- include ("./partials/header")%>
 <body>
     <%- include ("./partials/navBar")%>
+    <div class="container">
+        <% perguntas.forEach(pergunta=>{%>
+            <p><%= pergunta.titulo %></p>
+            <p><%= pergunta.descricao %></p>
+        <%}) %>
+    </div>
     <h1>PAGINA INICIAL</h1>
 </body>
 <%- include ("./partials/footer.ejs") %>
